# python/fate_flow/fate_flow_server.py
@@ -36,6 +36,7 @@ from fate_flow.apps.permission_app import manager as permission_app_manager
 from fate_flow.apps.version_app import manager as version_app_manager
 from fate_flow.apps.proxy_app import manager as proxy_app_manager
 from fate_flow.apps.info_app import manager as info_app_manager
+from fate_flow.apps.component_app import manager as component_app_manager
 from fate_flow.scheduling_apps.initiator_app import manager as initiator_app_manager
 from fate_flow.scheduling_apps.party_app import manager as party_app_manager
 from fate_flow.scheduling_apps.tracker_app import manager as tracker_app_manager
@@ -86,6 +87,7 @@ if __name__ == '__main__':
             '/{}/tracker'.format(API_VERSION): tracker_app_manager,
             '/{}/forward'.format(API_VERSION): proxy_app_manager,
             '/{}/info'.format(API_VERSION): info_app_manager,
+            '/{}/component'.format(API_VERSION): component_app_manager,
         }
     )
     # init
